# dex-services

./: .coveragerc  .dockerignore  .env  .env_db  .gitignore  .gitmodules  .mergify.yml  .pep8  .travis.yml  Cargo.toml  README.md  common-mainnet.env  common-open-solver.env  common-rinkeby.env  common.env  docker-common.yml  docker-compose.best-ring-solver.yml  docker-compose.binary.private.yml  docker-compose.binary.public.yml  docker-compose.binary.yaml  docker-compose.binary.yml  docker-compose.mainnet.yml  docker-compose.open-solver.yml  docker-compose.private-solver.yml  docker-compose.rinkeby.yaml  docker-compose.yml  pre-commit  pylintrc
contracts/: Cargo.toml  README.md  build.rs
contracts/artifacts/: BatchExchange.json  BatchExchangeViewer.json  ERC20Mintable.json  IERC20.json  IdToAddressBiMap.json  IterableAppendOnlySet.json  SolutionSubmitter.json  TokenOWL.json  TokenOWLProxy.json
contracts/deploy/: Cargo.toml
contracts/deploy/src/: main.rs
contracts/src/: lib.rs  paths.rs
core/: Cargo.toml
core/src/: economic_viability.rs  gas_price.rs  gas_station.rs  health.rs  history.rs  http_server.rs  lib.rs  logging.rs  macros.rs  metrics.rs  models.rs  monitoring.rs  orderbook.rs  price_estimation.rs  price_finding.rs  solution_submission.rs  time.rs  token_info.rs  transport.rs  util.rs
core/src/contracts/: stablex_auction_element.rs  stablex_contract.rs
core/src/driver/: scheduler.rs  stablex_driver.rs
core/src/gas_price/: eth_node.rs  gas_station.rs
core/src/history/: batches.rs  events.rs
core/src/http_server/: routing.rs
core/src/metrics/: http_metrics.rs  metrics_handler.rs  metrics_server.rs  solver_metrics.rs  stablex_metrics.rs
core/src/models/: account_state.rs  batch_id.rs  order.rs  solution.rs  tokens.rs
core/src/orderbook/: auction_data_reader.rs  block_or_timestamp.rs  filtered_orderbook.rs  history.rs  onchain_filtered_orderbook.rs  paginated_orderbook.rs  shadow_orderbook.rs  streamed.rs  util.rs
core/src/price_estimation/: average_price_source.rs  clients.rs  data.rs  dexag.rs  kraken.rs  oneinch.rs  orderbook_based.rs  price_source.rs  priority_price_source.rs  threaded_price_source.rs
core/src/price_finding/: min_avg_fee.rs  naive_solver.rs  optimization_price_finder.rs  price_finder_interface.rs
core/src/solution_submission/: retry.rs
core/src/token_info/: cached.rs  hardcoded.rs  onchain.rs
dfusion_rust_core/: Cargo.toml
dfusion_rust_core/src/: lib.rs  num.rs  util.rs
dfusion_rust_core/src/database/: error.rs  graph_reader.rs  mod.rs
dfusion_rust_core/src/models/: account_state.rs  auction_element.rs  auction_results.rs  flux.rs  mod.rs  order.rs  solution.rs  solution2.rs  standing_order.rs  state.rs  util.rs
driver/: .travis.yml  Cargo.toml  README.md  build.rs  common-mainnet.env  common-rinkeby.env  common-test.env  common.env  docker-compose.best-ring-solver.yml  docker-compose.mainnet.yml  docker-compose.open-solver.yml  docker-compose.private-solver.yml  docker-compose.rinkeby.yml  rinkeby_events.json  rinkeby_paginated.json
driver/benches/: db_benchmark.rs
driver/docker/: Dockerfile  deploy.sh  run.sh
driver/docker/rust/: Dockerfile  Dockerfile.debug
driver/docker/truffle/: Dockerfile  run.sh
driver/src/: contract.rs  db_interface.rs  deposit_driver.rs  error.rs  eth_rpc.rs  gas_station.rs  gnosis_safe_gas_station.rs  http.rs  lib.rs  logging.rs  macros.rs  main.rs  models.rs  mongo_db.rs  order_driver.rs  orderbook.rs  persisted_merkle_tree.rs  price_estimation.rs  snapp.rs  solution_submission.rs  transport.rs  util.rs  withdraw_driver.rs
driver/src/contracts/: base_contract.rs  batched_auction_data_reader.rs  dfusion.rs  erc20.rs  gnosis_safe_gas_station.rs  mod.rs  snapp_contract.rs  stablex.rs  stablex_auction_element.rs  stablex_contract.rs  stablex_contract_auction_element.rs
driver/src/driver/: deposit_driver.rs  mod.rs  order_driver.rs  scheduler.rs  stablex_driver.rs  withdraw_driver.rs
driver/src/http/: mod.rs
driver/src/metrics/: http_metrics.rs  metrics_server.rs  mod.rs  stablex_metrics.rs
driver/src/models/: account_state.rs  mod.rs  order.rs  solution.rs  standing_order.rs  state.rs  tokens.rs  util.rs
driver/src/orderbook/: auction_data_reader.rs  mod.rs  (+8 more)
driver/tests/: create_fake_data.rs
e2e/: Cargo.toml  README.md
e2e/src/: auction_bid.rs  cmd.rs  common.rs  docker_logs.rs  history.rs  lib.rs  snapp.rs  stablex.rs
e2e/tests/: batched_auction_data_reader_test.rs  common.rs  snapp_tests.rs  stablex_test.rs  test_snapp_deposit_withdraw.rs
gas-estimation/: Cargo.toml
gas-estimation/src/: eth_node.rs  ethgasstation.rs  gasnow.rs  gnosis_safe.rs  lib.rs  priority.rs
graph_node_reader/: Cargo.toml
graph_node_reader/src/: entities.rs  lib.rs  store.rs
listener/: Cargo.toml
listener/src/: link_resolver.rs  main.rs  metrics_registry.rs  runtime_host.rs
listener/subgraph_definition/: dfusion  schema.graphql
price-estimator/: Cargo.toml  README.md  openapi.yml
price-estimator/docker/: Dockerfile  deploy.sh
price-estimator/src/: amounts_at_price.rs  error.rs  estimate_buy_amount.rs  filter.rs  health.rs  infallible_price_source.rs  main.rs  metrics.rs  models.rs  orderbook.rs  solver_rounding_buffer.rs
pricegraph/: Cargo.toml  README.md
pricegraph/bench/: Cargo.toml  pricegraph.rs
pricegraph/benches/: main.rs  orderbook.rs  pricegraph.rs
pricegraph/data/: Cargo.toml  README.md  convert.js  convert.rs  fetch.js  fetch.rs  mod.rs  orderbook-5287195.hex  orderbook-5298183.hex  orderbook-5301531.hex  package.json
pricegraph/fuzz/: Cargo.toml  fuzz_all_targets.sh
pricegraph/src/: api.rs  encoding.rs  graph.rs  lib.rs  num.rs  orderbook.rs  test.rs
pricegraph/tests/: fuzzy.rs
pricegraph/wasm/: Cargo.toml  README.md
services-core/: Cargo.toml
services-core/src/: bigint_u256.rs  contracts.rs  economic_viability.rs  gas_price.rs  health.rs  history.rs  http.rs  lib.rs  logging.rs  macros.rs  models.rs  orderbook.rs  price_estimation.rs  price_finding.rs  serialization.rs  solution_submission.rs  token_info.rs  transport.rs  util.rs
(+232 files in other folders)
