[workspace]
members = [
    "contracts",
    "services-core",
    "driver",
    "e2e",
    "gas-estimation",
    "price-estimator",
    "pricegraph",
    "pricegraph/bench",
    "pricegraph/data",
    "pricegraph/data/bin",
    "pricegraph/fuzz",
    "pricegraph/wasm",
]
default-members = [
    "contracts",
    "gas-estimation",
    "services-core",
    "driver",
    "price-estimator",
    "pricegraph",
]
