[workspace]
members = [
    "contracts",
    "driver",
    "e2e",
    "gas-estimation",
    "price-estimator",
    "pricegraph",
    "pricegraph/bench",
    "pricegraph/data",
    "pricegraph/data/bin",
    "pricegraph/fuzz",
    "pricegraph/wasm",
    "services-core",
    "transaction-retry",
]
default-members = [
    "contracts",
    "driver",
    "gas-estimation",
    "price-estimator",
    "pricegraph",
    "services-core",
    "transaction-retry",
]
