[workspace]
members = [
    "contracts",
    "driver",
    "e2e",
    "price-estimator",
    "pricegraph",
    "pricegraph/bench",
    "pricegraph/data",
    "pricegraph/data/bin",
    "pricegraph/fuzz",
    "pricegraph/wasm",
    "services-core",
]
default-members = [
    "contracts",
    "driver",
    "price-estimator",
    "pricegraph",
    "services-core",
]
