[package]
name = "contracts"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nicholas.lordello@gnosis.pm>"]
edition = "2018"

[[bin]]
name = "deploy"
required-features = ["bin"]

[[bin]]
name = "vendor"
required-features = ["bin"]

[features]
default = []
bin = [
    "anyhow",
    "env_logger",
    "ethcontract-generate",
    "filetime",
    "futures",
    "log",
    "serde_json",
]

[dependencies]
ethcontract = "0.7.2"
serde = "1.0.116"

# [bin-dependencies]
anyhow = { version = "1.0.33", optional = true }
env_logger = { version = "0.7.1", optional = true }
ethcontract-generate = { version = "0.7.2", optional = true }
filetime = { version = "0.2.12", optional = true }
futures = { version = "0.3.6", features = ["compat"], optional = true }
log = { version = "0.4.11", optional = true }
serde_json = { version = "1.0.59", optional = true }

[build-dependencies]
ethcontract-generate = "0.7.2"

