[package]
name = "core"
version = "0.1.0"
authors = ["Alexander Herrmann <alex@gnosis.io>", "Ben Smith <ben@gnosis.io>", "Felix Leupold <felix@gnosis.io>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-std = "1.6"
bincode = "1.3.1"
blocking = "0.4.6"
byteorder = "1.3.4"
chrono = "0.4.13"
crossbeam-utils = "0.7"
ethcontract = "0.7.2"
futures = { version = "0.3.5", features = ["compat"] }
futures-timer = "3.0.2"
isahc = { version = "0.9.5", features = ["json"] }
lazy_static = "1.4.0"
log = "0.4.8"
num = { version = "0.3", features = ["serde"] }
pricegraph = { path = "../pricegraph" }
prometheus = "0.9.0"
rouille = "3.0.0"
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4"
slog = "2.5.2"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
slog-term = "2.6.0"
thiserror = "1.0"
uint = "0.8"
url = "2.1.1"

[dev-dependencies]
mockall = "0.7.1"

[build-dependencies]
ethcontract-generate = "0.7.2"

