[package]
name = "core"
version = "0.1.0"
authors = ["Alexander Herrmann <alex@gnosis.io>", "Ben Smith <ben@gnosis.io>", "Felix Leupold <felix@gnosis.io>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-std = "1.6"
bincode = "1.3.1"
blocking = "0.5.0"
byteorder = "1.3.4"
chrono = { version = "0.4.13", default-features = false  }
contracts = { path = "../contracts" }
crossbeam-utils = "0.7"
ethcontract = "0.7.2"
futures = { version = "0.3.5", features = ["compat"] }
isahc = { version = "0.9.7", features = ["json"] }
lazy_static = "1.4.0"
log = "0.4.11"
num = { version = "0.3", features = ["serde"] }
pricegraph = { path = "../pricegraph" }
prometheus = { version = "0.9.0", default-features = false }
rouille = { version = "3.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4"
slog = "2.5.2"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
slog-term = "2.6.0"
thiserror = "1.0"
uint = "0.8"
url = "2.1.1"

[dev-dependencies]
assert_approx_eq = "1"
mockall = "0.7.2"

