[package]
name = "dfusion_core"
version = "0.1.0"
authors = ["Alexander Herrmann <alex@gnosis.io>", "Ben Smith <ben@gnosis.io>", "Felix Leupold <felix@gnosis.io>"]
edition = "2018"

[dependencies]
array-macro = "1.0.4"
byteorder = "1.3.1"
graph = { git = "https://github.com/graphprotocol/graph-node", tag = "v0.13.2" }
graph-node-reader = { git = "https://github.com/fleupold/graph-node-reader", tag = "v0.13.2" }
lazy_static = "1.2.0"
mock-it = "0.2.0"
mongodb = { git = "https://github.com/mongodb-labs/mongo-rust-driver-prototype", rev = "9203ec3216976cfbfddb07856b25d061965810af"}
serde_derive = "1.0"
serde = "1.0"
sha2 = "0.8.0"
web3 = { git = "https://github.com/graphprotocol/rust-web3", branch = "trace-struct-pre-ethereum-types" }
log = "0.4.6"