[package]
name = "dfusion_core"
version = "0.1.0"
authors = ["Alexander Herrmann <alex@gnosis.io>", "Ben Smith <ben@gnosis.io>", "Felix Leupold <felix@gnosis.io>"]
edition = "2018"

[dependencies]
array-macro = "1.0.4"
byteorder = "1.3.1"
graph = { git = "https://github.com/graphprotocol/graph-node", tag = "v0.17.0" }
graph-node-reader = { git = "https://github.com/gnosis/graph-node-reader", tag = "v0.17.0" }
lazy_static = "1.4.0"
log = "0.4.8"
mockall = "0.6.0"
serde_derive = "1.0"
serde = "1.0"
sha2 = "0.8.1"
web3 = "0.8.0"