[package]
name = "driver"
version = "0.1.0"
authors = ["Alexander Herrmann <alex@gnosis.io>", "Ben Smith <ben@gnosis.io>", "Felix Leupold <felix@gnosis.io>"]
edition = "2018"

[lib]
name = "driver"
path = "src/lib.rs"

[dependencies]
byteorder = "1.3.1"
chrono = "0.4.10"
ethcontract = { git = "https://github.com/gnosis/ethcontract-rs", branch = "graph-patches-v0.3.0" }
futures = { version = "0.3.3", features = ["compat"] }
jsonrpc-core = "13.2.0"
lazy_static = "1.4.0"
log = "0.4.8"
prometheus = "0.7.0"
rouille = "3.0.0"
rustc-hex = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.5.2"
slog-async = "2.4.0"
slog-envlogger = "2.2.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
slog-term = "2.5.0"
web3 = "0.8.0"

[dev-dependencies]
mockall = "0.6.0"

[build-dependencies]
ethcontract-generate = { git = "https://github.com/gnosis/ethcontract-rs", branch = "graph-patches-v0.3.0" }
