[package]
name = "driver"
version = "0.1.0"
authors = ["Alexander Herrmann <alex@gnosis.io>", "Ben Smith <ben@gnosis.io>", "Felix Leupold <felix@gnosis.io>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
chrono = "0.4.10"
ethcontract = "0.4.0"
futures = { version = "0.3.4", features = ["compat"] }
isahc = { version = "0.8.2", features = ["json"] }
lazy_static = "1.4.0"
log = "0.4.8"
prometheus = "0.7.0"
rouille = "3.0.0"
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.5.2"
slog-async = "2.4.0"
slog-envlogger = "2.2.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
slog-term = "2.5.0"
uint = "0.8"

[dev-dependencies]
mockall = "0.6.0"

[build-dependencies]
ethcontract-generate = "0.4.0"
