[package]
name = "driver"
version = "0.1.0"
authors = ["Alexander Herrmann <alex@gnosis.io>", "Ben Smith <ben@gnosis.io>", "Felix Leupold <felix@gnosis.io>"]
edition = "2018"

[dependencies]
anyhow = "1"
byteorder = "1.3.4"
chrono = "0.4.11"
crossbeam-utils = "0.7"
ethcontract = "0.6.1"
futures = { version = "0.3.4", features = ["compat"] }
isahc = { version = "0.9.1", features = ["json"] }
lazy_static = "1.4.0"
log = "0.4.8"
prometheus = "0.8.0"
rouille = "3.0.0"
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4"
slog = "2.5.2"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
slog-term = "2.5.0"
structopt = "0.3.13"
thiserror = "1.0"
uint = "0.8"
url = "2.1.1"

[dev-dependencies]
mockall = "0.7.0"

[build-dependencies]
ethcontract-generate = "0.6.0"
