[package]
name = "e2e"
version = "1.0.0"
edition = "2018"

[dependencies]
anyhow = "1"
contracts = { path = "../contracts" }
services-core = { path = "../services-core" }
crossbeam = "0.8"
ethcontract = "0.7.2"
futures = { version = "0.3.6", features = ["compat"] }
pbr = "1.0.3"
pricegraph = { path = "../pricegraph" }
rayon = "1.4"
structopt = "0.3.20"
