[package]
name = "e2e"
version = "1.0.0"
edition = "2018"

[dependencies]
anyhow = "1"
contracts = { path = "../contracts" }
services-core = { path = "../services-core" }
ethcontract = { version = "0.11",  default-features = false }
crossbeam = "0.8"
futures = { version = "0.3.12" }
pbr = "1.0.4"
pricegraph = { path = "../pricegraph" }
rayon = "1.5"
structopt = "0.3.21"
