[package]
name = "gas-estimation"
version = "0.1.0"
authors = ["Gnosis Protocol Team <dex@gnosis.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.5"
web3 = "0.13"

[dev-dependencies]
assert_approx_eq = "1.1"
futures = "0.3"
isahc = { version = "0.9", features = ["json"] }
mockall = "0.8"
serde_json = "1.0"
