[package]
name = "listener"
version = "0.1.0"
authors = ["Alexander Herrmann <alex@gnosis.io>", "Ben Smith <ben@gnosis.io>", "Felix Leupold <felix@gnosis.io>"]
edition = "2018"

[[bin]]
name = "listener"
path = "src/main.rs"

[dependencies]
graph = { git = "https://github.com/graphprotocol/graph-node", tag = "v0.17.0" }
graph-core = { git = "https://github.com/graphprotocol/graph-node", tag = "v0.17.0" }
graph-chain-ethereum = { git = "https://github.com/graphprotocol/graph-node", tag = "v0.17.0" }
graph-node-reader = { git = "https://github.com/gnosis/graph-node-reader", tag = "v0.17.0" }
graph-store-postgres = { git = "https://github.com/graphprotocol/graph-node", tag = "v0.17.0" }
graph-server-http = { git = "https://github.com/graphprotocol/graph-node", tag = "v0.17.0" }
graph-server-websocket = { git = "https://github.com/graphprotocol/graph-node", tag = "v0.17.0" }

dfusion_core = { path = "../dfusion_rust_core" }

env_logger = "0.7.1"
failure = "0.1.6"
futures = "0.3.3"
graphql-parser = "0.2.1"
lazy_static = "1.4.0"
parity-wasm = "0.40"
serde_yaml = "0.8"
slog = "2.5.2"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
web3 = "0.8.0"

[dev-dependencies]
mockall = "0.6.0"
graph-mock = { git = "https://github.com/graphprotocol/graph-node", tag = "v0.17.0" }
