[package]
name = "price-estimator"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
core = { path = "../core" }
ethcontract = "0.7"
futures = "0.3"
log = "0.4"
pricegraph = { path = "../pricegraph" }
primitive-types = "0.7"
prometheus = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
url = "2.1"
warp = "0.2"
