[package]
name = "price-estimator"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.42"
services-core = { path = "../services-core" }
ethcontract = { version = "0.9",  default-features = false }
futures = "0.3"
log = "0.4"
pricegraph = { path = "../pricegraph" }
primitive-types = { version = "0.8.0", features = ["fp-conversion"] }
prometheus = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
url = "2.2"
warp = "0.2"

[dev-dependencies]
assert_approx_eq = "1"
