[package]
name = "pricegraph"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nicholas.lordello@gnosis.pm>"]
edition = "2018"

[[bench]]
name = "orderbook"
harness = false

[dependencies]
petgraph = "0.5"
primitive-types = "0.7"
thiserror = "1"

[dev-dependencies]
assert_approx_eq = "1"
criterion = "0.3"
data-encoding = "2"
lazy_static = "1"
