[package]
name = "pricegraph"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nicholas.lordello@gnosis.pm>"]
edition = "2018"

[[bench]]
name = "orderbook"
harness = false

[dependencies]
arbitrary = { version = "0.4", optional = true, features = ["derive"] }
petgraph = "0.5"
primitive-types = "0.6.2"
thiserror = "1"

[dev-dependencies]
assert_approx_eq = "1"
criterion = "0.3"
data-encoding = "2"
lazy_static = "1"
