[package]
name = "pricegraph"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nicholas.lordello@gnosis.pm>"]
edition = "2018"

[features]
default = []
bench = []
fuzz = ["arbitrary"]

[dependencies]
arbitrary = { version = "0.4", optional = true, features = ["derive"] }
petgraph = "0.5"
primitive-types = { version = "0.8.0", features = ["fp-conversion"] }
thiserror = "1"

[dev-dependencies]
assert_approx_eq = "1"
pricegraph-data = { path = "data" }
