[package]
name = "services-core"
version = "0.1.0"
authors = ["Alexander Herrmann <alex@gnosis.io>", "Ben Smith <ben@gnosis.io>", "Felix Leupold <felix@gnosis.io>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-std = "1.7"
async-trait = "0.1.42"
bincode = "1.3.1"
blocking = "1.0.0"
byteorder = "1.3.4"
chrono = { version = "0.4.19", default-features = false  }
contracts = { path = "../contracts" }
ethcontract = { version = "0.9",  default-features = false }
futures = "0.3.8"
gas-estimation = { path = "../gas-estimation" }
isahc = { version = "0.9.13", features = ["json"] }
lazy_static = "1.4.0"
log = "0.4.11"
num = { version = "0.3", features = ["serde"] }
pricegraph = { path = "../pricegraph" }
primitive-types = { version = "0.7.3", features = ["fp-conversion"] }
prometheus = { version = "0.11.0", default-features = false }
rouille = { version = "3.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6"
slog = "2.7.0"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"
slog-scope = "4.3.0"
slog-stdlog = "4.1.0"
slog-term = "2.6.0"
thiserror = "1.0"
transaction-retry = { path = "../transaction-retry" }
typenum = "1.12.0"
uint = "0.8"
url = "2.2.0"

[dev-dependencies]
assert_approx_eq = "1"
mockall = "0.8.3"

