[package]
name = "deploy"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
contracts = { path = "../" }
env_logger = "0.7"
ethcontract = { version = "0.8", default-features = false, features = ["http"] }
filetime = "0.2"
log = "0.4"
tokio = { version = "0.2.22", features = ["macros"] }
