[package]
name = "pricegraph-bench"
version = "0.0.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2018"
publish = false

[[bench]]
name = "pricegraph"
path = "pricegraph.rs"
harness = false

[dependencies]
criterion = "0.3"
itertools = "0.9"
pricegraph = { path = "..", features = ["bench"] }
pricegraph-data = { path = "../data" }
