[package]
name = "pricegraph-data"
version = "0.0.0"
authors = ["Nicholas Rodrigues Lordello <nicholas.lordello@gnosis.pm>"]
edition = "2018"
publish = false

[[bin]]
name = "fetch"
path = "fetch.rs"

[dependencies]
anyhow = "1.0.32"
contracts = { path = "../../contracts" }
env_logger = "0.7.1"
futures = { version = "0.3.5", features = ["compat"] }
hex = "0.4.2"
log = "0.4.11"
